--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,9 @@ html {
 }
 
 body {
-	background: $white;
-  font: 18px/1.4 $helvetica;
-  color: $darkGray;
+	background: $darkGray;
+  font: 14px/1.2 $helvetica;
+  color: $white;
 }
 
 .container {
