--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 	background: $darkerGray;
-  font: 14px/1.2 $helvetica;
+  font: 11px $helvetica;
   color: $white;
 }
 
@@ -32,10 +32,10 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
-  color: $darkGray;
+  color: $cyberBlue;
   font-weight: bold;
 
-  line-height: 1.7;
+  line-height: 1.5;
   margin: 1em 0 15px;
   padding: 0;
 
@@ -165,8 +165,8 @@ img {
 
 .site-avatar {
   float: left;
-  width: 70px;
-  height: 70px;
+  width: 25px;
+  height: 25px;
   margin-right: 15px;
 
   @include mobile {
