--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 body {
 	background: $darkerGray;
   font: 11px $helvetica;
-  color: $white;
+  color: $lightGray;
 }
 
 .container {
@@ -117,7 +117,7 @@ img {
 
 .date {
   font-style: italic;
-  color: $gray;
+  color: $cyberBlue;
 }
 
 // Specify the color of the selection
@@ -192,7 +192,7 @@ img {
 
 .site-name {
   margin: 0;
-  color: $cyberBlue;
+  color: $lightGray;
   cursor: pointer;
   font-family: $helveticaNeue;
   font-weight: 300;
@@ -225,7 +225,7 @@ nav {
 
   a {
     margin-left: 20px;
-    color: $lightGray;
+    color: $cyberBlue;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
@@ -273,8 +273,8 @@ nav {
 
 .wrapper-footer {
   margin-top: 50px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
+  border-top: 1px solid #353535;
+  border-bottom: 1px solid #353535;
   background-color: $darkerGray;
 }
 
