--- a/style.scss
+++ b/style.scss
@@ -192,7 +192,7 @@ img {
 
 .site-name {
   margin: 0;
-  color: $lightGray;
+  color: $gray;
   cursor: pointer;
   font-family: $helveticaNeue;
   font-weight: 300;
@@ -232,7 +232,7 @@ nav {
 
     @include mobile {
       margin: 0 10px;
-      color: $blue;
+      color: $cyberBlue;
     }
   }
 }
