--- a/style.scss
+++ b/style.scss
@@ -31,7 +31,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
+  font-family: $audioWide;
   color: $cyberBlue;
   font-weight: bold;
 
@@ -194,7 +194,7 @@ img {
   margin: 0;
   color: $gray;
   cursor: pointer;
-  font-family: $helveticaNeue;
+  font-family: $audioWide;
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
@@ -213,7 +213,7 @@ img {
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
+  font-family: $audioWide;
   font-size: 18px;
 
   @include mobile {
