--- a/style.scss
+++ b/style.scss
@@ -156,7 +156,7 @@ img {
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
+  border-bottom: 1px dotted $borderGray;
 
   @include mobile {
     text-align: center;
@@ -243,7 +243,7 @@ nav {
 
 .posts > .post {
   padding-bottom: 2em;
-  border-bottom: 1px dotted $Gray;
+  border-bottom: 1px dotted $borderGray;
 }
 
 .posts > .post:last-child {
@@ -254,7 +254,7 @@ nav {
 .post {
   blockquote {
     margin: 1.8em .8em;
-    border-left: 2px solid $gray;
+    border-left: 2px solid $borderGray;
     padding: 0.1em 1em;
     color: $gray;
     font-size: 22px;
@@ -273,8 +273,8 @@ nav {
 
 .wrapper-footer {
   margin-top: 50px;
-  border-top: 1px solid #353535;
-  border-bottom: 1px solid #353535;
+  border-top: 1px dotted $borderGray;
+  border-bottom: 1px dotted $borderGray;
   background-color: $darkerGray;
 }
 
