--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
+          <script src="https://tryhackme.com/badge/58523"></script>
           {% include svg-icons.html %}
         </footer>
       </div>
