--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,13 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <script src="https://tryhackme.com/badge/58523"></script>
           </nav>
         </header>
       </div>
+    </div>
+
+    <div id="thm-badge">
+      <script class="badge" src="https://tryhackme.com/badge/58523"></script>
     </div>
 
     <div id="main" role="main" class="container">
