--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,11 +33,10 @@
       </div>
     </div>
 
-    <div id="thm-badge">
-      <script class="badge" src="https://tryhackme.com/badge/58523"></script>
-    </div>
-
     <div id="main" role="main" class="container">
+      <div style="float:right;">
+        <script src="https://tryhackme.com/badge/58523"></script>
+      </div>
       {{ content }} 
     </div>
 
