--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
       </div>
     </div>
 
-    <div id="main" role="main" class="container">
+    <div id="main" role="main" class="container clearfix">
       <div style="float:right;">
         <script src="https://tryhackme.com/badge/58523"></script>
       </div>
