--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,16 +33,17 @@
       </div>
     </div>
 
-    <div id="main" role="main" class="container clearfix">
-      <div style="float:right;">
-        <script src="https://tryhackme.com/badge/58523"></script>
-      </div>
+    <div id="main" role="main" class="container">
       {{ content }} 
     </div>
 
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
+          <div style="float:right;">
+            <script src="https://tryhackme.com/badge/58523"></script>
+          </div>
+          <br><br>
           {% include svg-icons.html %}
         </footer>
       </div>
