--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,11 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          
-          <div class="site-info">
+          <div class="site-badge">
             <script src="https://tryhackme.com/badge/58523"></script>
-            <br>
+          </div>
+
+          <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
           </div>
