testing splitting posts into categories

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,11 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/">home</a>
+            <a href="{{ site.baseurl }}/life">life</a>
+            <a href="{{ site.baseurl }}/hardware">hardware</a>
+            <a href="{{ site.baseurl }}/software">software</a>
+            <a href="{{ site.baseurl }}/about">about</a>
           </nav>
         </header>
       </div>
