--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -3,12 +3,6 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
 
-    <meta property="og:image" content="./images/testing.svg" />
-    <meta property="og:image:type" content="image/svg+xml" />
-    <meta property="og:image:width" content="100" />
-    <meta property="og:image:height" content="100" />
-    <meta property="og:image:alt" content="A shiny red apple with a bite taken out" />
-
     {% if page.excerpt %}
     <meta name="description" content="{{ page.excerpt| strip_html }}" />
     <meta property="og:description" content="{{ page.excerpt| strip_html }}" />
@@ -21,4 +15,9 @@
     {% if page.title %}
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="twitter:title" content="{{ page.title }}" />
+    <meta property="og:image" content="/images/testing.svg" />
+    <meta property="og:image:type" content="image/svg+xml" />
+    <meta property="og:image:width" content="100" />
+    <meta property="og:image:height" content="100" />
+    <meta property="og:image:alt" content="A shiny red apple with a bite taken out" />
     {% endif %}
