--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="twitter:title" content="{{ page.title }}" />
     <meta property="og:image" content="/images/testing.svg" />
-    <meta property="og:image:type" content="image/svg+xml" />
+    <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="100" />
     <meta property="og:image:height" content="100" />
     <meta property="og:image:alt" content="A shiny red apple with a bite taken out" />
