--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
+  <h3>{{ page.categories }}</h3>
 
   <div class="entry">
     {{ content }}
@@ -12,6 +13,4 @@ layout: default
   <div class="date">
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
-
-  {% include disqus.html %}
 </article>
