--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
-    <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
   <body>
@@ -30,9 +29,8 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">home</a>
-            <a href="{{ site.baseurl }}/life">life</a>
-            <a href="{{ site.baseurl }}/hardware">hardware</a>
-            <a href="{{ site.baseurl }}/software">software</a>
+            <a href="{{ site.baseurl }}/blog">blog</a>
+            <a href="{{ site.baseurl }}/tags">tags</a>
             <a href="{{ site.baseurl }}/about">about</a>
           </nav>
         </header>
