--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
-  <h3>{{ page.categories }}</h3>
+  tags: {{ page.categories }}
 
   <div class="entry">
     {{ content }}
