--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
-  tags: {{ page.categories }}
+  <h3>tags: {{ page.categories }}</h3>
 
   <div class="entry">
     {{ content }}
