--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -16,6 +16,7 @@ $gray: #666;
 $lightGray: #cfcfcf;
 $white: #fff;
 $cyberBlue: #4389c2;
+$cyberPink: #ff10f0;
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
