--- a/style.scss
+++ b/style.scss
@@ -69,7 +69,7 @@ p {
 }
 
 a {
-  color: $blue;
+  color: $cyberPink;
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
@@ -284,6 +284,7 @@ nav {
   .read-more {
     text-transform: uppercase;
     font-size: 14px;
+    color: $cyberPink;
   }
 }
 
